# Aria

./: -- @mssql Chat Query Editor (aria-24563.sql  .changed_c_like.txt  .changed_files.txt  .changed_js_like.txt  .changed_py.txt  .editorconfig  .env  .env.example  .git_status_main.tmp  .git_status_short.tmp  .gitattributes  .gitignore  .gitmode  .markdownlint.yaml  .pre-commit-config.yaml  .prettierignore  .status_after_reset.tmp  AGENTS.md  AGENT_QUICKSTART.md  AGI.prompt.yml  AGI_DATASETS_COMPLETE.md  AI_DATASETS_CATALOG.md  ARIA_LLM_INFRASTRUCTURE_RESEARCH.md  ARIA_QUICKREF.txt  ARIA_TEST_SUITE_IMPLEMENTATION.md  AUTOMATED_TRAINING_PIPELINE.md  AUTOMATIC_AUTOMATION_GUIDE.md  AUTOMATION_RUNNER.md  AUTONOMOUS_AGENT_GUIDE.md  AUTONOMOUS_AGENT_IMPLEMENTATION.md  AUTONOMOUS_TRAINING_REPORT.md  AUTONOMOUS_TRAINING_SESSION_SUMMARY.md  AUTOTRAIN_README.md  AZURE_QUANTUM_SUCCESS.md  AzuriteConfig  CHANGELOG.md  CLEANUP_SCRIPT.sh  CODEGEN_REPORT.md  CODE_OF_CONDUCT.md  CONFIG_CHECKLIST.md  (+118 more)
.audit/: agi-local-dev.tsv
.azure/: PRE-DEPLOYMENT-CHECKLIST.md  PRODUCTION-RUNBOOK.md  QUICK-START.md  README.md  deploy-prod.sh  deployment-plan.md  main.bicep  verify-deployment.sh
.azureml/: environment.yml  job_multi_20251125T012515Z.yaml  job_multi_20251125T012559Z.yaml  job_multi_20251125T055919Z.yaml
.azurite/: AzuriteConfig
.circleci/: cci-agent-setup.yml  config.yml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  post-create.sh
.foundry/: .deployment.json
.githooks/: README.md  pre-commit  pre-commit.ps1
.github/: COPILOT_ADVANCED_CUSTOMIZATION.md  COPILOT_SETUP_GUIDE.md  COPILOT_VALIDATION_CHECKLIST.md  DEFAULT_GITHUB_AUTOMATION.md  DEFAULT_GITHUB_RULESET_CHECKLIST.md  FUNDING.yml  GITHUB_ACTIONS_QUICKREF.txt  GITHUB_ACTIONS_SETUP.md  MCP_SERVERS_REFERENCE.md  PULL_REQUEST_TEMPLATE.md  STARTER_MATRIX.md  WORKFLOWS.md  agent.md  copilot-instructions-v2.md  copilot-instructions.full.md  copilot-instructions.md  copilot.yml  dependabot.yml  labeler.yml  lm-studio-setup.md  secret_scanning.yml  yamllint.yml
.mirrord/: mirrord.json
.openclaw/: workspace-state.json
AI/: README.md  requirements.txt  (+1 more)
(+3201 files in other folders)
